--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app_4",
   "version": "0.1.0",
-  "homepage":"https://{irfan-007}.github.io/{client_portfolio}",
+  "homepage":"https://irfan-007.github.io/client_portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
